--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<h1 class="page-title">Image Gallery</h1>
 		</header>
 		<div class="description container container--small">
-			<p>This is a responsive image gallery, built with Flexbox</p>
+			<p>This will be a responsive image gallery, built with Flexbox</p>
 		</div>
 		<div class="gallery container">
 		</div>
