--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="keywords" content="Image Gallery">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 
-		<title>Image Gallery</title>
+		<title>My Image Gallery</title>
 
 		<meta property="og:url" content="http://" />
 		<meta property="og:type" content="website" />
@@ -16,7 +16,7 @@
 
 		<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono" rel="stylesheet">
 
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="build/style.css">
 
 	</head>
 	<body>
@@ -27,6 +27,66 @@
 			<p>This will be a responsive image gallery, built with Flexbox</p>
 		</div>
 		<div class="gallery container">
+			<a href="images/01.jpg" class="gallery__item"> 
+				<div></div>
+			</a>
+			<a href="images/02.jpg" class="gallery__item"> 
+				<div></div>
+			</a>
+			<a href="images/03.jpg" class="gallery__item"> 
+				<div></div>
+			</a>
+			<a href="images/04.jpg" class="gallery__item"> 
+				<div></div>
+			</a>
+			<a href="images/05.jpg" class="gallery__item"> 
+				<div></div>
+			</a>
+			<a href="images/06.jpg" class="gallery__item"> 
+				<div></div>
+			</a>
+			<a href="images/07.jpg" class="gallery__item"> 
+				<div></div>
+			</a>
+			<a href="images/08.jpg" class="gallery__item"> 
+				<div></div>
+			</a>
+			<a href="images/09.jpg" class="gallery__item"> 
+				<div></div>
+			</a>
+			<a href="images/10.jpg" class="gallery__item"> 
+				<div></div>
+			</a>
+			<a href="images/11.jpg" class="gallery__item"> 
+				<div></div>
+			</a>
+			<a href="images/12.jpg" class="gallery__item"> 
+				<div></div>
+			</a>
+			<a href="images/13.jpg" class="gallery__item"> 
+				<div></div>
+			</a>
+			<a href="images/14.jpg" class="gallery__item"> 
+				<div></div>
+			</a>
+			<a href="images/15.jpg" class="gallery__item"> 
+				<div></div>
+			</a>
+			<a href="images/16.jpg" class="gallery__item"> 
+				<div></div>
+			</a>
+			<a href="images/17.jpg" class="gallery__item"> 
+				<div></div>
+			</a>
+			<a href="images/18.jpg" class="gallery__item"> 
+				<div></div>
+			</a>
+			<a href="images/19.jpg" class="gallery__item"> 
+				<div></div>
+			</a>
+			<a href="images/20.jpg" class="gallery__item"> 
+				<div></div>
+			</a>
 		</div>
 	</body>
 </html>
