--- a/index.html
+++ b/index.html
@@ -27,6 +27,87 @@
 			<p>This will be a responsive image gallery, built with Flexbox</p>
 		</div>
 		<div class="gallery container">
+
+			<a href="images/01.jpg" class="gallery__item">
+			<div></div>
+			</a>
+			
+			<a href="images/02.jpg" class="gallery__item">
+			<div></div>
+			</a>
+			
+			<a href="images/03.jpg" class="gallery__item">
+			<div></div>
+			</a>
+			
+			<a href="images/04.jpg" class="gallery__item">
+			<div></div>
+			</a>			
+			
+			<a href="images/05.jpg" class="gallery__item">
+			<div></div>
+			</a>			
+			
+			<a href="images/06.jpg" class="gallery__item">
+			<div></div>
+			</a>			
+			
+			<a href="images/07.jpg" class="gallery__item">
+			<div></div>
+			</a>			
+			
+			<a href="images/08.jpg" class="gallery__item">
+			<div></div>
+			</a>			
+			
+			<a href="images/09.jpg" class="gallery__item">
+			<div></div>
+			</a>			
+			
+			<a href="images/10.jpg" class="gallery__item">
+			<div></div>
+			</a>			
+			
+			<a href="images/11.jpg" class="gallery__item">
+			<div></div>
+			</a>			
+			
+			<a href="images/12.jpg" class="gallery__item">
+			<div></div>
+			</a>			
+			
+			<a href="images/13.jpg" class="gallery__item">
+			<div></div>
+			</a>			
+			
+			<a href="images/14.jpg" class="gallery__item">
+			<div></div>
+			</a>			
+			
+			<a href="images/15.jpg" class="gallery__item">
+			<div></div>
+			</a>			
+			
+			<a href="images/16.jpg" class="gallery__item">
+			<div></div>
+			</a>			
+			
+			<a href="images/17.jpg" class="gallery__item">
+			<div></div>
+			</a>			
+			
+			<a href="images/18.jpg" class="gallery__item">
+			<div></div>
+			</a>			
+			
+			<a href="images/19.jpg" class="gallery__item">
+			<div></div>
+			</a>			
+			
+			<a href="images/20.jpg" class="gallery__item">
+			<div></div>
+			</a>
+
 		</div>
 	</body>
 </html>
