--- a/index.html
+++ b/index.html
@@ -21,12 +21,72 @@
 	</head>
 	<body>
 		<header class="container container--small">
-			<h1 class="page-title">Image Gallery</h1>
+			<h1 class="page-title"> Good Boi Benji </h1>
 		</header>
 		<div class="description container container--small">
-			<p>This will be a responsive image gallery, built with Flexbox</p>
+			<p>This will be a responsive image gallery, built with love <3 </p>
 		</div>
 		<div class="gallery container">
-		</div>
+		<a href="images/01.jpg" class="gallery__item">
+			<div></div>
+		</a>
+		<a href="images/02.jpg" class="gallery__item">
+			<div></div>
+		</a>
+		<a href="images/03.jpeg" class="gallery__item">
+			<div></div>
+		</a>
+		<a href="images/04.jpg" class="gallery__item">
+			<div></div>
+		</a>
+		<a href="images/05.jpg" class="gallery__item">
+			<div></div>
+		</a>
+		<a href="images/06.jpg" class="gallery__item">
+			<div></div>
+		</a>
+		<a href="images/07.jpg" class="gallery__item">
+			<div></div>
+		</a>
+		<a href="images/08.jpg" class="gallery__item">
+			<div></div>
+		</a>
+		<a href="images/09.jpg" class="gallery__item">
+			<div></div>
+		</a>
+		<a href="images/10.jpg" class="gallery__item">
+			<div></div>
+		</a>
+		<a href="images/11.jpg" class="gallery__item">
+			<div></div>
+		</a>
+		<a href="images/12.jpg" class="gallery__item">
+			<div></div>
+		</a>
+		<a href="images/13.jpg" class="gallery__item">
+			<div></div>
+		</a>
+		<a href="images/14.jpg" class="gallery__item">
+			<div></div>
+		</a>
+		<a href="images/15.jpg" class="gallery__item">
+			<div></div>
+		</a>
+		<a href="images/16.jpg" class="gallery__item">
+			<div></div>
+		</a>
+		<a href="images/17.jpg" class="gallery__item">
+			<div></div>
+		</a>
+		<a href="images/18.jpg" class="gallery__item">
+			<div></div>
+		</a>
+		<a href="images/19.jpg" class="gallery__item">
+			<div></div>
+		</a>
+		<a href="images/20.jpg" class="gallery__item">
+			<div></div>
+		</a>	
+	</div>
 	</body>
 </html>
