--- a/index.html
+++ b/index.html
@@ -14,79 +14,88 @@
 		<meta property="og:description" content="Image Gallery" />
 		<meta property="og:image" content="" />
 
-		<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 
-		<link rel="stylesheet" href="build/style.css">
 
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		<header class="container container--small">
 			<h1 class="page-title">Image Gallery</h1>
 		</header>
 		<div class="description container container--small">
-			<p>This will be a responsive image gallery, built with Flexbox</p>
+			<p>Martina Gallo Homework</p>
 		</div>
 		<div class="gallery container">
-			<a href="images/01.jpg" class="gallery__item"> 
+			<a data-href="images/01.jpg" class="gallery__item"> 
 				<div></div>
 			</a>
-			<a href="images/02.jpg" class="gallery__item"> 
+			<a data-href="images/02.jpg" class="gallery__item"> 
 				<div></div>
 			</a>
-			<a href="images/03.jpg" class="gallery__item"> 
+			<a data-href="images/03.jpg" class="gallery__item"> 
 				<div></div>
 			</a>
-			<a href="images/04.jpg" class="gallery__item"> 
+			<a data-href="images/04.jpg" class="gallery__item"> 
 				<div></div>
 			</a>
-			<a href="images/05.jpg" class="gallery__item"> 
+			<a data-href="images/05.jpg" class="gallery__item"> 
 				<div></div>
 			</a>
-			<a href="images/06.jpg" class="gallery__item"> 
+			<a data-href="images/06.jpg" class="gallery__item"> 
 				<div></div>
 			</a>
-			<a href="images/07.jpg" class="gallery__item"> 
+			<a data-href="images/07.jpg" class="gallery__item"> 
 				<div></div>
 			</a>
-			<a href="images/08.jpg" class="gallery__item"> 
+			<a data-href="images/08.jpg" class="gallery__item"> 
 				<div></div>
 			</a>
-			<a href="images/09.jpg" class="gallery__item"> 
+			<a data-href="images/09.jpg" class="gallery__item"> 
 				<div></div>
 			</a>
-			<a href="images/10.jpg" class="gallery__item"> 
+			<a data-href="images/10.jpg" class="gallery__item"> 
 				<div></div>
 			</a>
-			<a href="images/11.jpg" class="gallery__item"> 
+			<a data-href="images/11.jpg" class="gallery__item"> 
 				<div></div>
 			</a>
-			<a href="images/12.jpg" class="gallery__item"> 
+			<a data-href="images/12.jpg" class="gallery__item"> 
 				<div></div>
 			</a>
-			<a href="images/13.jpg" class="gallery__item"> 
+			<a data-href="images/13.jpg" class="gallery__item"> 
 				<div></div>
 			</a>
-			<a href="images/14.jpg" class="gallery__item"> 
+			<a data-href="images/14.jpg" class="gallery__item"> 
 				<div></div>
 			</a>
-			<a href="images/15.jpg" class="gallery__item"> 
+			<a data-href="images/15.jpg" class="gallery__item"> 
 				<div></div>
 			</a>
-			<a href="images/16.jpg" class="gallery__item"> 
+			<a data-href="images/16.jpg" class="gallery__item"> 
 				<div></div>
 			</a>
-			<a href="images/17.jpg" class="gallery__item"> 
+			<a data-href="images/17.jpg" class="gallery__item"> 
 				<div></div>
 			</a>
-			<a href="images/18.jpg" class="gallery__item"> 
+			<a data-href="images/18.jpg" class="gallery__item"> 
 				<div></div>
 			</a>
-			<a href="images/19.jpg" class="gallery__item"> 
+			<a data-href="images/19.jpg" class="gallery__item"> 
 				<div></div>
 			</a>
-			<a href="images/20.jpg" class="gallery__item"> 
+			<a data-href="images/20.jpg" class="gallery__item"> 
 				<div></div>
 			</a>
 		</div>
+
+		<div class="modal">
+			<div class="modal-close"></div>
+			<img class="modal__image" src="" alt="">
+		</div>
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="js/scripts.js"></script>
 	</body>
 </html>
