--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<h1 class="page-title">Kitties and Shibas</h1>
 		</header>
 		<div class="description container container--small">
-			<p>and what about it?</p>
+			<p>And what about it?</p>
 		</div>
 		<div class="gallery container">
 			<a data-href="images/cat1.jpg" class="gallery__item">
