--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
 
 			<div class="modal-close"></div>
 			<img class="modal__image" src="" alt="">
+
+			<div class="next-button" data-href=""></div>
+			<div class="prev-button" data-href=""></div>
 		</div>
 
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
