--- a/index.html
+++ b/index.html
@@ -93,7 +93,10 @@
 	<div class="modal">
 
 	<div class="modal-close"></div>
-	<img class="modal__image" src="" alt="">
+	<img class="modal__image">
+	<div class="next-button" data-href=""></div>
+	<div class="previous-button" data-href=""></div>
+
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
