--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+§<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
@@ -6,7 +6,7 @@
 		<meta name="keywords" content="Image Gallery">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 
-		<title>Image Gallery</title>
+		<title>Dreaming of travel</title>
 
 		<meta property="og:url" content="http://" />
 		<meta property="og:type" content="website" />
@@ -21,10 +21,10 @@
 	</head>
 	<body>
 		<header class="container container--small">
-			<h1 class="page-title">Image Gallery</h1>
+			<h1 class="page-title">Dreaming of Travel</h1>
 		</header>
 		<div class="description container container--small">
-			<p></p>
+			<p>The places I miss</p>
 		</div>
 		<div class="gallery container">
 			<a data-href="images/01.jpg" class="gallery__item">
@@ -34,7 +34,7 @@
 				<div></div>
 			</a>
 			<a data-href="images/03.jpg" class="gallery__item">
-				<div></div> 
+				<div></div>
 			</a>
 			<a data-href="images/04.jpg" class="gallery__item">
 				<div></div>
@@ -85,17 +85,20 @@
 				<div></div>
 			</a>
 			<a data-href="images/20.jpg" class="gallery__item">
-				<div>
-				</div>
+				<div></div>
 			</a>
 		</div>
+
 		<div class="modal">
+
 			<div class="modal-close"></div>
-			<img class="modal__image" src="">
+			<img class="modal__image" src="" alt="">
+
+			<div class="next-button" data-href=""></div>
+			<div class="prev-button" data-href=""></div>
 		</div>
+
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="js/scripts.js"></script>
-		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Montserrat|Playfair+Display" rel="stylesheet">
 	</body>
 </html>
