--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
 		<div class="modal">
 			<div class="modal-close"></div>
 			<img class="modal__image" src="">
+
+		<div class="next-button"></div>
+		<div class="prev-button"></div>
+
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="js/scripts.js"></script>
