--- a/index.html
+++ b/index.html
@@ -21,72 +21,82 @@
 	</head>
 	<body>
 		<header class="container container--small">
-			<h1 class="page-title">Image Gallery</h1>
+			<h1 class="page-title">Ruofei's Image Gallery</h1>
 		</header>
 		<div class="description container container--small">
-			<p>This will be a responsive image gallery, built with Flexbox</p>
+			<p>Find dogs, cats, cities, architecture, landscapes, plants...</p>
 		</div>
 		<div class="gallery container">
-			<a href="images/01.jpg" class="gallery__item">
+			<a data-href="images1/01.jpg" class="gallery__item">
 				<div></div>
 			</a>
-			<a href="images/02.jpg" class="gallery__item">
+			<a data-href="images1/02.jpg" class="gallery__item">
 				<div></div>
 			</a>
-			<a href="images/03.jpg" class="gallery__item">
+			<a data-href="images1/03.jpg" class="gallery__item">
 				<div></div>
 			</a>
-			<a href="images/04.jpg" class="gallery__item">
+			<a data-href="images1/04.jpg" class="gallery__item">
 				<div></div>
 			</a>
-			<a href="images/05.jpg" class="gallery__item">
+			<a data-href="images1/05.jpg" class="gallery__item">
 				<div></div>
 			</a>
-			<a href="images/06.jpg" class="gallery__item">
+			<a data-href="images1/06.jpg" class="gallery__item">
 				<div></div>
 			</a>
-			<a href="images/07.jpg" class="gallery__item">
+			<a data-href="images1/07.jpg" class="gallery__item">
 				<div></div>
 			</a>
-			<a href="images/08.jpg" class="gallery__item">
+			<a data-href="images1/08.jpg" class="gallery__item">
 				<div></div>
 			</a>
-			<a href="images/09.jpg" class="gallery__item">
+			<a data-href="images1/09.jpg" class="gallery__item">
 				<div></div>
 			</a>
-			<a href="images/10.jpg" class="gallery__item">
+			<a data-href="images1/10.jpg" class="gallery__item">
 				<div></div>
 			</a>
-			<a href="images/11.jpg" class="gallery__item">
+			<a data-href="images1/11.jpg" class="gallery__item">
 				<div></div>
 			</a>
-			<a href="images/12.jpg" class="gallery__item">
+			<a data-href="images1/12.jpg" class="gallery__item">
 				<div></div>
 			</a>
-			<a href="images/13.jpg" class="gallery__item">
+			<a data-href="images1/13.jpg" class="gallery__item">
 				<div></div>
 			</a>
-			<a href="images/14.jpg" class="gallery__item">
+			<a data-href="images1/14.jpg" class="gallery__item">
 				<div></div>
 			</a>
-			<a href="images/15.jpg" class="gallery__item">
+			<a data-href="images1/15.jpg" class="gallery__item">
 				<div></div>
 			</a>
-			<a href="images/16.jpg" class="gallery__item">
+			<a data-href="images1/16.jpg" class="gallery__item">
 				<div></div>
 			</a>
-			<a href="images/17.jpg" class="gallery__item">
+			<a data-href="images1/17.jpg" class="gallery__item">
 				<div></div>
 			</a>
-			<a href="images/18.jpg" class="gallery__item">
+			<a data-href="images1/18.jpg" class="gallery__item">
 				<div></div>
 			</a>
-			<a href="images/19.jpg" class="gallery__item">
+			<a data-href="images1/19.jpg" class="gallery__item">
 				<div></div>
 			</a>
-			<a href="images/20.jpg" class="gallery__item">
+			<a data-href="images1/20.jpg" class="gallery__item">
 				<div></div>
 			</a>
 		</div>
+
+		<div class="modal">
+			<div class="modal-close"></div>
+			<img class="modal__image" src="" alt="">
+			<div class="next_button" data-href></div>
+			<div class="prev_button" data-href></div>
+		</div>
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="js/script.js"></script>
 	</body>
 </html>
