--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta name="keywords" content="Image Gallery">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 
-		<title>Dreaming of travel</title>
+		<title>Catch Flights not Feelings</title>
 
 		<meta property="og:url" content="http://" />
 		<meta property="og:type" content="website" />
@@ -21,10 +21,10 @@
 	</head>
 	<body>
 		<header class="container container--small">
-			<h1 class="page-title">Dreaming of Travel</h1>
+			<h1 class="page-title">Anywhere but Home</h1>
 		</header>
 		<div class="description container container--small">
-			<p>The places I miss</p>
+			<p>catch flights not feelings</p>
 		</div>
 		<div class="gallery container">
 			<a data-href="images/01.jpg" class="gallery__item">
