--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<meta property="og:description" content="Image Gallery" />
 		<meta property="og:image" content="" />
 
-		<link href="https://fonts.googleapis.com/css?family=Srisakdi" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Poiret+One" rel="stylesheet">
 
 		<link rel="stylesheet" href="css/style.css">
 
