--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
 		<meta property="og:description" content="Image Gallery" />
 		<meta property="og:image" content="" />
 
-		<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Teko" rel="stylesheet">
 
 		<link rel="stylesheet" href="css/style.css">
 
 	</head>
 	<body>
+
 		<header class="container container--small">
-			<h1 class="page-title">Image Gallery</h1>
+			<h1 class="page-title"> A$AP Mob Image Gallery</h1>
 		</header>
 		<div class="description container container--small">
-			<p>This will be a responsive image gallery, built with Flexbox</p>
+			<p> Images of the A$AP Mob throughout the years</p>
 		</div>
 		<div class="gallery container">
 			<a data-href="images/01.jpg" class="gallery__item">
@@ -69,7 +70,7 @@
 			<a data-href="images/14.jpg" class="gallery__item">
 				<div></div>
 			</a>
-			<a href="images/15.jpg" class="gallery__item">
+			<a data-href="images/15.jpg" class="gallery__item">
 				<div></div>
 			</a>
 			<a data-href="images/16.jpg" class="gallery__item">
@@ -97,6 +98,6 @@
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="js/scripts.js"></script>
-
+	</img>
 	</body>
 </html>
