--- a/index.html
+++ b/index.html
@@ -15,10 +15,7 @@
 	<meta property="og:description" content="Image Gallery" />
 	<meta property="og:image" content="" />
 
-	<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono" rel="stylesheet">
-
 	<link rel="stylesheet" href="css/style.css">
-
 </head>
 
 <body>
@@ -29,67 +26,69 @@
 		<p>forms of blackmail not included</p>
 	</div>
 	<div class="gallery container">
-		<a href="images/01.jpg" class="gallery__item">
+		<a data-href="images/01.jpg" class="gallery__item">
 			<div></div>
 		</a>
-		<a href="images/02.jpg" class="gallery__item">
+		<a data-href="images/02.jpg" class="gallery__item">
 			<div></div>
 		</a>
-		<a href="images/03.jpg" class="gallery__item">
+		<a data-href="images/03.jpg" class="gallery__item">
 			<div></div>
 		</a>
-		<a href="images/04.jpg" class="gallery__item">
+		<a data-href="images/04.jpg" class="gallery__item">
 			<div></div>
 		</a>
-		<a href="images/05.jpg" class="gallery__item">
+		<a data-href="images/05.jpg" class="gallery__item">
 			<div></div>
 		</a>
-		<a href="images/06.jpg" class="gallery__item">
+		<a data-href="images/06.jpg" class="gallery__item">
 			<div></div>
 		</a>
-		<a href="images/07.jpg" class="gallery__item">
+		<a data-href="images/07.jpg" class="gallery__item">
 			<div></div>
 		</a>
-		<a href="images/08.jpg" class="gallery__item">
+		<a data-href="images/08.jpg" class="gallery__item">
 			<div></div>
 		</a>
-		<a href="images/09.jpg" class="gallery__item">
+		<a data-href="images/09.jpg" class="gallery__item">
 			<div></div>
 		</a>
-		<a href="images/10.jpg" class="gallery__item">
+		<a data-href="images/10.jpg" class="gallery__item">
 			<div></div>
 		</a>
-		<a href="images/11.jpg" class="gallery__item">
+		<a data-href="images/11.jpg" class="gallery__item">
 			<div></div>
 		</a>
-		<a href="images/12.jpg" class="gallery__item">
+		<a data-href="images/12.jpg" class="gallery__item">
 			<div></div>
 		</a>
-		<a href="images/13.jpg" class="gallery__item">
+		<a data-href="images/13.jpg" class="gallery__item">
 			<div></div>
 		</a>
-		<a href="images/14.jpg" class="gallery__item">
+		<a data-href="images/14.jpg" class="gallery__item">
 			<div></div>
 		</a>
-		<a href="images/15.jpg" class="gallery__item">
+		<a data-href="images/15.jpg" class="gallery__item">
 			<div></div>
 		</a>
-		<a href="images/16.jpg" class="gallery__item">
+		<a data-href="images/16.jpg" class="gallery__item">
 			<div></div>
 		</a>
-		<a href="images/17.jpg" class="gallery__item">
+		<a data-href="images/17.jpg" class="gallery__item">
 			<div></div>
 		</a>
-		<a href="images/18.jpg" class="gallery__item">
+		<a data-href="images/18.jpg" class="gallery__item">
 			<div></div>
 		</a>
-		<a href="images/19.jpg" class="gallery__item">
+		<a data-href="images/19.jpg" class="gallery__item">
 			<div></div>
 		</a>
-		<a href="images/20.jpg" class="gallery__item">
+		<a data-href="images/20.jpg" class="gallery__item">
 			<div></div>
 		</a>
 	</div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="scripts.js"></script>
 </body>
 
 </html>
