--- a/index.html
+++ b/index.html
@@ -87,6 +87,14 @@
 			<div></div>
 		</a>
 	</div>
+	<div class="modal">
+	
+		<div class="modal-close"></div>
+		<img class="modal__image" src="" alt="">
+		<div class="next-button" data-href=""></div>
+		<div class="prev-button" data-href=""></div>
+	
+	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="scripts.js"></script>
 </body>
