--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 		<meta property="og:description" content="Image Gallery" />
 		<meta property="og:image" content="" />
 
-		<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
 
 		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		<header class="container container--small">
-			<h1 class="page-title">Image Gallery</h1>
+			<h1 class="page-title">Snow Day</h1>
 		</header>
 		<div class="description container container--small">
-			<p>Martina Gallo Homework</p>
+			<p>December 2018</p>
 		</div>
 		<div class="gallery container">
 			<a data-href="images/01.jpg" class="gallery__item"> 
