--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta property="og:image" content="" />
 
 		<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Dosis" rel="stylesheet">
 
 
 		<link rel="stylesheet" href="css/style.css">
