--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 		<meta property="og:description" content="Image Gallery" />
 		<meta property="og:image" content="" />
 
-		<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Slabo+27px" rel="stylesheet">
 
 		<link rel="stylesheet" href="css/style.css">
 
 	</head>
 	<body>
 		<header class="container container--small">
-			<h1 class="page-title">Image Gallery</h1>
+			<h1 class="page-title">Fruit Image Gallery</h1>
 		</header>
 		<div class="description container container--small">
 			<p>This will be a responsive image gallery, built with Flexbox</p>
