--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<h1 class="page-title">Fruit Image Gallery</h1>
 		</header>
 		<div class="description container container--small">
-			<p>This will be a responsive image gallery, built with Flexbox</p>
+			<p>Summer is coming! Prepare yourself with fresh fruits!</p>
 		</div>
 		<div class="gallery container">
 				<!-- a.gallery__item*20>div -->
