--- a/cloud.html
+++ b/cloud.html
@@ -19,13 +19,24 @@
 		<link rel="stylesheet" href="css/style.css">
 
 	</head>
-	<body>
+
+	<body class="cloud-gallery">
 		<header class="container container--small">
 			<h1 class="page-title">Cloud Gallery</h1>
-		</header>
-		<div class="description container container--small">
-			<p></p>
+</header>
+
+		<div class="navbar">
+			<a href="home.html" class="active">Home |</a>
+			<a href="cloud.html">Clouds |</a>
+			<a href="ocean.html">Ocean |</a>
+			<a href="flower.html">Flowers</a>
 		</div>
+
+		<div class="description container container--small">
+		</div>
+
+		<h2>Press any key!</h2>
+
 		<div class="gallery container">
 
 			<a data-href= "images/01.jpg" class= "gallery__item">
